package entities;

public class Iphone implements ReprodutorMusical, AparelhoTelefonico, NavegadorInternet{
}
