classDiagram
    
    Iphone --> ReprodutorMusical : implements
    ReprodutorMusical : +tocarMusica()
    ReprodutorMusical : +pausarMusica()
    ReprodutorMusical : +selecionarMusica()
    Iphone --> AparelhoTelefonico : implements
    AparelhoTelefonico : +ligar()
    AparelhoTelefonico : +atender()
    AparelhoTelefonico : +iniciarCorreioDeVoz()
    Iphone --> NavegadorInternet : implements
    NavegadorInternet : +exibirPagina()
    NavegadorInternet : +adicionarNovaAba()
    NavegadorInternet : +atualizarPagina()
  